--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ansi_up": "^3.0.0",
     "lodash.throttle": "^4.1.1",
     "portal-vue": "^1.5.0",
+    "serve": "^11.2.0",
     "vue": "^2.5.17",
     "vue-click-outside": "^1.0.7",
     "vue-i18n": "^8.2.1",
@@ -24,8 +25,9 @@
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-prettier": "^3.0.5",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
+    "node": "^8.15.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
